[package]
name = "cly-rusty"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
reqwest = { version = "0.13", features = ["blocking", "json"] }
scraper = "0.25"
tokio = { version = "1", features = ["full"] }
url = "2.5"
tracing-subscriber = "0.3.22"
tracing = "0.1.44"
directories = "6.0.0"
serde_json = "1.0.149"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
fuzzy-matcher = "0.3.7"
chrono = "0.4.42"
